# Requests

./: .gitignore  CMakeLists.txt  README.md  temp.txt
headers/: base_headers.hpp  networking_headers.hpp
libs/: networking_functions.c++  requests.c++  string_functions.c++
objects/: requests_tests
prototypes/: networking_functions  requests
tests/: requests_tests.c++
